--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,23 +70,22 @@ nav {
 	flex-wrap: wrap;
 	justify-content: space-between;
 	padding: 50px 60px 0 60px;
-}
-
-nav li {
-	list-style: none;
-	display: inline-block;
-	padding-right: 10px;
-	padding-left: 10px;
-}
-
-nav li span {
-	padding-left: 5px;
-}
-
-li a {
-	padding: 5px;
-	background-color: #fff;
-	text-decoration: none;
+	li {
+		list-style: none;
+		display: inline-block;
+		padding-right: 10px;
+		padding-left: 10px;
+		span {
+			padding-left: 5px;
+		}
+		li {
+			a {
+				padding: 5px;
+				background-color: #fff;
+				text-decoration: none;
+			}
+		}
+	}
 }
 
 .cart ion-icon {
